Fin de la seccion 6

--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "calculadora",
-  "displayName": "calculadora"
+  "name": "calculadoraVarela",
+  "displayName": "calculadoraVarela"
 }
