--- a/ios/calculadoraVarela.xcodeproj/xcshareddata/xcschemes/calculadoraVarela.xcscheme
+++ b/ios/calculadoraVarela.xcodeproj/xcshareddata/xcschemes/calculadoraVarela.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "calculadora.app"
-               BlueprintName = "calculadora"
-               ReferencedContainer = "container:calculadora.xcodeproj">
+               BuildableName = "calculadoraVarela.app"
+               BlueprintName = "calculadoraVarela"
+               ReferencedContainer = "container:calculadoraVarela.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "calculadoraTests.xctest"
-               BlueprintName = "calculadoraTests"
-               ReferencedContainer = "container:calculadora.xcodeproj">
+               BuildableName = "calculadoraVarelaTests.xctest"
+               BlueprintName = "calculadoraVarelaTests"
+               ReferencedContainer = "container:calculadoraVarela.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "calculadora.app"
-            BlueprintName = "calculadora"
-            ReferencedContainer = "container:calculadora.xcodeproj">
+            BuildableName = "calculadoraVarela.app"
+            BlueprintName = "calculadoraVarela"
+            ReferencedContainer = "container:calculadoraVarela.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "calculadora.app"
-            BlueprintName = "calculadora"
-            ReferencedContainer = "container:calculadora.xcodeproj">
+            BuildableName = "calculadoraVarela.app"
+            BlueprintName = "calculadoraVarela"
+            ReferencedContainer = "container:calculadoraVarela.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
